
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;

void print_n_spaces(int n)
{
 int x;
 for (x = 0; x < n; x++)
  printf(" ");
}
